# mint-v2

./: .env.example  .gitignore  README.md  compose.yml  eslint.config.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  test-extend.ts  vite.config.ts
.github/: copilot-instructions.md
.github/instructions/: client.instructions.md
.github/workflows/: build-push.yml  client-build-push.yml  client-test.yml  playwright.yml  server-build-push.yml  server-test.yml  test.yml
client/: .env.example  .gitignore  Dockerfile  README.md  compose.yml  eslint.config.js  package-lock.json  package.json  svelte.config.js  test-extend.ts  vite.config.ts  vitest.setup-server.ts
client/e2e/: compare.test.ts  region.test.ts  strategise.test.ts  utils.ts
client/scripts/: common.sh  run_dependencies.sh  (+1 more)
e2e/: demo.test.ts  home.test.ts  region.test.ts  strategise.test.ts  utils.ts
scripts/: common.sh  run_dependencies.sh
server-python/: .dockerignore  .gitignore  Dockerfile  README.md  alert-rules.yml  alertmanager.yml  compose.yml  loki-config.yml  prometheus.yml  promtail-config.yml  pyproject.toml
server-python/app/: main.py  models.py
server-python/app/resources/: dynamicFormOptions.json
server-python/app/schemas/: DynamicFormOptions.schema.json
server-python/app/services/: emulator.py  resources.py  x.ipynb
server-python/grafana/provisioning/: dashboards.yml
server-python/tests/: conftest.py  test_main.py  test_models.py
server-python/tests/services/: test_emulator.py  test_resources.py
src/: app.css  app.d.ts  hooks.server.ts
(+256 files in other folders)
